--- a/app/package.json
+++ b/app/package.json
@@ -6,19 +6,20 @@
     "@csstools/normalize.css": "^10.1.0",
     "antd-mobile": "^2.2.14",
     "glamorous": "^5.0.0",
+    "history": "latest",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-svg": "^10.0.13",
     "react-router": "latest",
-    "history": "latest"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
