--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
     "antd-mobile": "^2.2.14",
+    "babel-plugin-import": "^1.12.0",
     "glamorous": "^5.0.0",
+    "history": "latest",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
     "node-sass": "^4.12.0",
@@ -14,16 +16,15 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-loadable": "^5.5.0",
+    "react-router": "latest",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-svg": "^10.0.13",
-    "react-router": "latest",
-    "history": "latest"
+    "react-svg": "^10.0.13"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
