--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,13 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
+    "babel-plugin-import": "^1.12.0",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "customize-cra": "^0.4.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^5.16.0",
@@ -53,6 +55,7 @@
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-app-rewired": "^2.1.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
