--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
@@ -143,6 +145,18 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd-mobile",
+          "style": true
+        }
+      ]
     ]
+  },
+  "theme": {
+    "brand-primary": "#e8713a"
   }
 }
