--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "antd-mobile": "^2.2.14",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
@@ -55,6 +56,7 @@
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
     "qrcode.react": "^0.9.3",
+    "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-app-rewired": "^2.1.3",
