--- a/app/package.json
+++ b/app/package.json
@@ -60,6 +60,7 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-app-rewired": "^2.1.3",
+    "react-captcha-generator": "^1.6.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
