--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "js-cookie": "^2.2.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "0.5.0",
@@ -60,7 +61,6 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-app-rewired": "^2.1.3",
-    "react-captcha-generator": "^1.6.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
