--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dahuazheng.github.io/the-funds",
   "dependencies": {
     "@babel/core": "7.4.3",
     "@csstools/normalize.css": "^10.1.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^1.5.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "gh-pages": "^2.1.0",
     "glamorous": "^5.0.0",
     "history": "latest",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -84,7 +86,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
