--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react-app": "^9.0.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "compressorjs": "^1.0.5",
     "css-loader": "2.1.1",
     "customize-cra": "^0.4.1",
     "dayjs": "^1.8.15",
