--- a/app/package.json
+++ b/app/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-loadable": "^5.5.0",
+    "react-qr-reader": "^2.2.1",
     "react-router": "latest",
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
